Object_Oriented_Software_Construction/Assignment6/code/swc-oosc-swcarchitect-webservice/singleDemo/deployment.yaml
apiVersion: v1
kind: DeploymentConfig
metadata:
  name: singledemo-deployment
  labels:
    app: singledemo
spec:
  replicas: 2
  selector:
    app: singledemo
  template:
    metadata:
      labels:
        app: singledemo
    spec:
      containers:
      - name: multipod
        image: swcarchitect:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
          protocol: TCP
      restartPolicy: Always
  triggers:
  - type: ConfigChange
  - imageChangeParams:
      automatic: true
      containerNames:
      - multipod
      from:
        kind: ImageStreamTag
        name: swcarchitect:latest
    type: ImageChange
  strategy:
    type: Rolling
