Object_Oriented_Software_Construction/Assignment6/code/swc-oosc-swcarchitect-webservice/singleDemo/pod2.yaml
  apiVersion: v1
  kind: Pod
  metadata:
    labels:
      app: singledemo2
      name: singlepod2
    name: singledemo2-pod
  spec:
    containers:
    - name: singlepod2
      image: swcarchitect:0.0.9-SNAPSHOT
      imagePullPolicy: IfNotPresent
      ports:
      - containerPort: 8080
        protocol: TCP
