Object_Oriented_Software_Construction/Assignment6/code/swc-oosc-swcarchitect-webservice/singleDemo/service.yaml
  apiVersion: v1
  kind: Service
  metadata:
    name: singledemo-service
    labels:
      app: singledemo
  spec:
    selector:
      app: singledemo
    ports:
    - nodePort: 0
      port: 8080
      protocol: TCP
      targetPort: 8080
