Object_Oriented_Software_Construction/Assignment6/code/swc-oosc-swcarchitect-webservice/singleDemo/route.yaml
  apiVersion: v1
  kind: Route
  metadata:
    name: singledemo-route
    labels:
      app: singledemo
  spec:
    to:
      kind: Service
      name: singledemo-service
